# lodestone-public

./: .gitignore  LICENSE  NOTICE  README.md
.github/workflows/: build-cpp-mod.yml  make_def.py
cpp-mod/: CMakeLists.txt  README.md
cpp-mod/mods/: CMakeLists.txt
cpp-mod/mods/CairnMap/: CMakeLists.txt
cpp-mod/mods/CairnMap/src/: cairn_data.hpp  cairn_project.hpp  cairn_relic_types.hpp  dllmain.cpp
cpp-mod/tests/: test_project.cpp
data/codegen/: lotus.json  notes.json  relic_guids.json  relic_types.json  towers.json
data/locations/: BossLocations.json  CaveMushroomLocations.json  CoalLocations.json  CopperLocations.json  DogCoinLocations.json  EffigyLocations.json  FruitTreeLocations.json  HexoliteLocations.json  JunkLocations.json  LotusAttackLocations.json  MagmaRockLocations.json  MushroomLocations.json  NightStoneLocations.json  NoteLocations.json  OilLocations.json  OreRocksLocations.json  OutpostLocations.json  PaldiumLocations.json  QuartzLocations.json  RedBerryLocations.json  SkillFruitLocations.json  SkyIslandOreLocations.json  SulfurLocations.json  TreasureChestLocations.json  WorldTreeOreLocations.json
docs/: P1.5-effigies.md  SPEC-2.0.md
mod/: Info.json
tools/: cleanup-legacy.sh
tools/audit/: compare_dll.py
tools/codegen/: freeze_inputs.py  gen_cairn_data.py  gen_relic_types.py  verify_parity.py
tools/extract-locations/: README.md  extract_bosses.py  extract_locations.py  fetch_oodle.py  gate_oodle.py  gen_data.py  palpak.py  uecell.py  validate.py
tools/probe-locations/Scripts/: main.lua
tools/runtime-fix/: README.md  main.lua
